2001-02-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed weapon bug (throwing non-throwable weapons) and a few others.

2001-02-24 Dancer Vesperman <dancer@users.sourceforge.net>
	* SDL 1.1 allows us to selectively initialise and terminate
	  subsystems. Make use of that for the audio system initially.
	* Some extended output for caught exceptions, to make them simpler
	  to read.

2001-02-22  Max Horn  <max@quendi.de>
	* tons of fixes I already made days ago and forgot to commit :(
	* files/utils.cc: added fix to U7open to prevent certain problems
	  when reusing stream objects.
	* gumps/Stats_gump.h: fixed Stats_gump::add which had the wrong
	  signature. The first parameter was of type Game* instead of Game_object*
	* keys.c: removed a static (caused compile error on ANSI complian C++ compilers <g>)
	  and added using std::strlen
	* bggame.cc: removed some warnings
	

2001-02-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.*: applied Grant's patch
	* actors.h: fixed warning/bug

2001-02-20  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, exultmenu.cc imagewin/*.*: Added in Derek Liauw Kie Fa's
	  SuperEagle scaler.
	  	
2001-02-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: cleaned up 'build game map' code. Now accessible using a
	cmdline parameter. (-buildmap 0|1|2), where 0,1,2 determines skiplift

2001-02-16  Ryan Nunn  <triforce@merlin.net.au>
	* actor*.*, gamewin.*, objs/eggs.*, objs/objs.h: Caching system of the 
	  originals is now emulated by Exult. This solves the Army of Darkness
	  Bug as well as many of the bugs in SI related to cached in Usecode
	  eggs.
	* exult_constants.h: Added c_num_schunks.

2001-02-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* mapedit/u7shp.c: check if image is indexed before saving. (fixes crash)
	* mapedit/uniquepal.c: little tool to 'uniquify' a palette. (not included in main build)

2001-02-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>